Creando operaciones para los catalogos
